# discord-game-community-bot

./: .env  Cargo.toml  Dockerfile.cross-musl
migrations/: 20210322132209_init.sql
src/: kingdom.rs  main.rs  util.rs
