[package]
name = "ramgee-bot"
version = "0.1.0"
authors = ["Gyusun Yeom <omniavinco@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
chrono = "*"
clokwerk = "0.3"
ego-tree = "*"
scraper = "0.12"
once_cell = "1.7"
itertools = "0.10"
encoding = "0.2"
serde_json = "*"
reqwest = { version="0.11", features = ["rustls-tls-webpki-roots"], default-features = false }
serenity = { version = "0.10.4", default-features = false, features = ["builder", "client", "cache", "gateway", "model", "rustls_backend", "unstable_discord_api"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
